--- a/demo/card.htm
+++ b/demo/card.htm
@@ -1,7 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <div id="paypal-button"></div>
 
-<script src="https://www.paypalobjects.com/api/checkout.js"></script>
+<script src="../dist/checkout.js"></script>
 
 <script>
     paypal.Button.render({
@@ -15,9 +15,9 @@
         style: {
             branding: true, // optional
             layout: 'vertical',
-            size:  'large', // small | medium | large | responsive
+            size:  'medium', // small | medium | large | responsive
             shape: 'rect',   // pill | rect
-            color: 'gold'   // gold | blue | silve | black
+            color: 'silver'   // gold | blue | silve | black
         },
 
         client: {
