adding domain functionality and fpti tracking for button

--- a/demo/card.htm
+++ b/demo/card.htm
@@ -2,6 +2,7 @@
 <div id="paypal-button"></div>
 
 <script src="../dist/checkout.js" data-paypal-checkout></script>
+<!-- <script src="https://www.paypalobjects.com/api/checkout.js" data-paypal-checkout></script> -->
 
 <script data-paypal-checkout>
     paypal.Button.render({
